--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -41,7 +41,7 @@
 
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
-      <table class="table table-inverse">
+      <table class="table table-hover table-inverse">
         <thead>
           <tr>
             <th></th>
