--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,5 +1,7 @@
 <main>
-  <p id="notice"></p>
+  <p id="notice">
+    <%= flash[:notice] %>
+  </p>
   <div class="container">
     <div class="row">
       <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
