--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,16 @@
 <main>
-  <p id="notice"></p>
+  <p id="notice">
+    <%= flash[:notice] %>
+  </p>
   <div class="container px-5 px-sm-0">
 
   <div class="row">
     <div class="col-md-3">
+
       <h2>User info</h2>
       <%= attachment_image_tag current_user, :profile_image, :fill, 100, 100, format: 'jpeg',fallback: "no_image.jpg" %>
+
+
   <table class="table">
   <tbody><tr></tr>
   <tr>
