--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,16 +7,16 @@
   <div class="row">
     <div class="col-md-3">
       <h2>User info</h2>
-      <%= attachment_image_tag current_user, :profile_image, :fill, 100, 100, format: 'jpeg',fallback: "no_image.jpg" %>
+      <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg',fallback: "no_image.jpg" %>
   <table class="table">
   <tbody><tr></tr>
   <tr>
 	  <th>name</th>
-	  <th><%= current_user.name %></th>
+	  <th><%= @user.name %></th>
   </tr>
   <tr>
 	  <th>introduction</th>
-	  <th><%= current_user.introduction %></th>
+	  <th><%= @user.introduction %></th>
   </tr>
   </tbody>
 </table>
@@ -26,19 +26,19 @@
 </div>
 
   <h2 class="mt-3">New book</h2>
-  <%= form_with model: @book_new, local:true do |f|  %>
+  <%= form_with model: @book_new, local:true do |f| %>
   <div class="form-group">
     <label for="book_title">Title</label>
-    <%= f.text_field :title, class: "form-control book_title" %>
+     <%= f.text_field :title,class: "form-control book_title" %>
   </div>
   <div class="form-group">
     <label for="book_opinion">Opinion</label>
     <%= f.text_area :body, class: "form-control book_body" %>
   </div>
   <div class="form-group">
-    <%= f.submit"Create book", class: "btn btn-success" %>
+    <%= f.submit "Create Book", class: "btn btn-success" %>
   </div>
-  <% end %>
+    <% end %>
   </div>
 
     <div class="col-md-8 offset-md-1">
