--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,41 +7,28 @@
   <div class="row">
     <div class="col-md-3">
 
-      <h2>User info</h2>
-      <%= attachment_image_tag current_user, :profile_image, :fill, 100, 100, format: 'jpeg',fallback: "no_image.jpg" %>
-
+  <h2>User info</h2>
+  <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg',fallback: "no_image.jpg" %>
 
   <table class="table">
   <tbody><tr></tr>
   <tr>
 	  <th>name</th>
-	  <th><%= current_user.name %></th>
+	  <th><%= @user.name %></th>
   </tr>
   <tr>
 	  <th>introduction</th>
-	  <th><%= current_user.introduction %></th>
+	  <th><%= @user.introduction %></th>
   </tr>
   </tbody>
 </table>
 
 <div class="row">
-  <%= link_to"", edit_user_path(current_user), class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
+  <%= link_to"", edit_user_path(@user), class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
 </div>
 
-  <h2 class="mt-3">New book</h2>
-  <%= form_with model: @book, local:true do |f|  %>
-  <div class="form-group">
-    <label for="book_title">Title</label>
-    <%= f.text_field :title, class: "form-control book_title" %>
-  </div>
-  <div class="form-group">
-    <label for="book_opinion">Opinion</label>
-    <%= f.text_area :body, class: "form-control book_body" %>
-  </div>
-  <div class="form-group">
-    <%= f.submit"Create book", class: "btn btn-success" %>
-  </div>
-  <% end %>
+  <%= render 'users/list' %>
+
   </div>
 
     <div class="col-md-8 offset-md-1">
@@ -56,18 +43,18 @@
           </tr>
         </thead>
         <tbody>
-        <% @user.books.each do |book| %>
-          <tr>
-            <td>
+          <% @user.books.each do |book| %>
+            <tr>
               <%= link_to user_path(@user) do %>
-              <%= attachment_image_tag book.user, :profile_image, size: "40x40", format: 'jpeg',fallback: "no_image.jpg" %>
+              <td>
+                <%= attachment_image_tag @user, :profile_image, size: "40x40", format: 'jpeg',fallback: "no_image.jpg" %>
+                </td>
               <% end %>
-            </td>
-            <td><%= link_to book.title, book_path(book.id) %></td>
-            <td><%= book.body %></td>
-          </tr>
+              <td><%= link_to book.title, book_path(book.id) %></td>
+              <td><%= book.body %></td>
+            </tr>
+          <% end %>
         </tbody>
-        <% end %>
         </table>
       </div>
     </div>
